--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,3 +1,7 @@
+<h1 *ngIf="movies.length>0">{{ title }}</h1>
+<div class="alert alert-warning" *ngIf="movies.length<=0"> Film Bulunamadı.</div>
+
+
 <div class="card mb-3" *ngFor="let item of movies">
     <div class="row">
         <div class="col-md-4">
