--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,18 +1,70 @@
-<h1 *ngIf="movies.length>0">{{ title }}</h1>
-<div class="alert alert-warning" *ngIf="movies.length<=0"> Film Bulunamadı.</div>
+<div *ngIf="movies.length>0; else noMovies">
+    <h1>{{ title }}</h1>
+    <div class="alert alert-warning"> {{movies.length}} adet film bulundu. </div>
+    <ng-template [ngTemplateOutlet]="movieList2" [ngTemplateOutletContext]="{ movies: movieRepository.getPopularMovies() }"></ng-template>
+    <ng-template [ngTemplateOutlet]="movieList1"></ng-template>
+    <ng-template [ngTemplateOutlet]="movieList3" [ngTemplateOutletContext]="{ movies: movieRepository.getPopularMovies() }"></ng-template>
+
+    
+</div>
 
 
-<div class="card mb-3" *ngFor="let item of movies">
-    <div class="row">
-        <div class="col-md-4">
-            <img src="../../assets/img/{{item.imageUrl}}" alt="" class="img-fluid rounded-start">
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h2 class="card-title">{{item.title}}</h2>
-                <p class="card-text">{{item.description}}</p>
-                <button class="btn btn-sm btn-outline-primary">Details</button>
+
+
+
+
+
+<ng-template #noMovies>
+    <div class="alert alert-warning">Film Bulunamadı.</div>
+</ng-template>
+
+
+<ng-template #movieList1>
+    <div class="card mb-3" *ngFor="let item of movies">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="../../assets/img/{{item.imageUrl}}" alt="" class="img-fluid rounded-start">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h2 class="card-title">{{item.title | titlecase }}</h2>
+                    <p class="card-text">{{item.description}}</p>
+                    <button class="btn btn-sm btn-outline-primary">Details</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</ng-template>
+
+<ng-template #movieList2 let-filmler="movies">
+    <div class="row row-cols-1 row-cols-md-3 g-4 mb-3">
+        <div class="col" *ngFor="let item of filmler">
+            <div class="card h-100">
+                <img src="../../assets/img/{{ item.imageUrl }}" alt="">
+                <div class="card-body">
+                    <h5 class="card-title"> {{ item.title}}</h5>
+                    <p class="card-text"> {{ item.description}} </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
+
+<ng-template #movieList3 let-populerFilmler="movies">
+    <h2> Popüler Filmler</h2>
+    <div class="card mb-3" *ngFor="let item of populerFilmler">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="../../assets/img/{{item.imageUrl}}" alt="" class="img-fluid rounded-start">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h2 class="card-title">{{item.title}}</h2>
+                    <p class="card-text">{{item.description}}</p>
+                    <button class="btn btn-sm btn-outline-primary">Details</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</ng-template>
+
